Archive2/06/4338b1dc0b46be/output
main.cpp: In function 'int main()':
main.cpp:25:5: error: incomplete type 'repeat<int, 3ul>' used in nested name specifier
     repeat<int, 3>::type x;
     ^
main.cpp:25:26: error: expected ';' before 'x'
     repeat<int, 3>::type x;
                          ^
main.cpp:26:17: error: 'x' was not declared in this scope
     std::get<0>(x);
                 ^
